emf-agent/src/services/snapshots/emf_stats_agent__tests__job_stats.snap
---
source: emf-agent/src/services/stats-agent.rs
expression: xs

---
[
    "memused",
    "memused_max",
    "lnet_memused",
    "health_check",
    "mdt.*.exports.*.uuid",
    "mgs.*.mgs.stats",
    "mgs.*.mgs.threads_max",
    "mgs.*.mgs.threads_min",
    "mgs.*.mgs.threads_started",
    "mgs.*.num_exports",
    "obdfilter.*OST*.job_stats",
    "obdfilter.*OST*.stats",
    "obdfilter.*OST*.brw_stats",
    "obdfilter.*OST*.filesfree",
    "obdfilter.*OST*.filestotal",
    "obdfilter.*OST*.fstype",
    "obdfilter.*OST*.kbytesavail",
    "obdfilter.*OST*.kbytesfree",
    "obdfilter.*OST*.kbytestotal",
    "obdfilter.*OST*.num_exports",
    "obdfilter.*OST*.tot_dirty",
    "obdfilter.*OST*.tot_granted",
    "obdfilter.*OST*.tot_pending",
    "ldlm.namespaces.{mdt-,filter-}*.contended_locks",
    "ldlm.namespaces.{mdt-,filter-}*.contention_seconds",
    "ldlm.namespaces.{mdt-,filter-}*.ctime_age_limit",
    "ldlm.namespaces.{mdt-,filter-}*.early_lock_cancel",
    "ldlm.namespaces.{mdt-,filter-}*.lock_count",
    "ldlm.namespaces.{mdt-,filter-}*.lock_timeouts",
    "ldlm.namespaces.{mdt-,filter-}*.lock_unused_count",
    "ldlm.namespaces.{mdt-,filter-}*.lru_max_age",
    "ldlm.namespaces.{mdt-,filter-}*.lru_size",
    "ldlm.namespaces.{mdt-,filter-}*.max_nolock_bytes",
    "ldlm.namespaces.{mdt-,filter-}*.max_parallel_ast",
    "ldlm.namespaces.{mdt-,filter-}*.resource_count",
    "mdt.*.job_stats",
    "mdt.*.md_stats",
    "mdt.*MDT*.num_exports",
    "osd-*.*MDT*.filesfree",
    "osd-*.*MDT*.filestotal",
    "osd-*.*MDT*.kbytesavail",
    "osd-*.*MDT*.kbytesfree",
    "osd-*.*MDT*.kbytestotal",
]
